Couple of new facts, amends to content

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>University of York Festive Feature 2015</title>
+        <title>2015 review of the year - University of York</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,7 +22,7 @@
         <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-WXLX54');</script>
 
         <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/" target="_blank" target="_blank">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
         <section class="section--type3" id="intro">
@@ -40,7 +40,7 @@
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">1</strong> new Chancellor</div>
                 <div class="section__text">
-                    <p>In October we  <a href="http://www.york.ac.uk/chancellor-inauguration/">inaugurated our sixth chancellor,Professor Sir Malcolm Grant</a>.</p>
+                    <p>In October we  <a href="http://www.york.ac.uk/chancellor-inauguration/" target="_blank" target="_blank">inaugurated our sixth chancellor,Professor Sir Malcolm Grant</a>.</p>
                 </div>
             </div>
         </section>
@@ -72,7 +72,7 @@
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">7</strong>  Research Champions appointed to harness the strengths of our interdisciplinary collaboarations</div>
                 <div class="section__text">
-                    <p>The Champions unveiled <a href="http://www.york.ac.uk/chancellor-inauguration/research/">their plans for our new research themes</a> as part of the Chancellor's Inauguration.</p>
+                    <p>The Champions unveiled <a href="http://www.york.ac.uk/chancellor-inauguration/research/" target="_blank" target="_blank">their plans for our new research themes</a> as part of the Chancellor's Inauguration.</p>
                 </div>
             </div>
         </section>
@@ -80,7 +80,7 @@
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">10<small>th</small></strong> in the UK for Research Council income</div>
                 <div class="section__text">
-                    <p>We secured <a href="http://www.york.ac.uk/about/awards/the-research-income-2015/">£46m in research funding</a> in 2014/15,  an 81% increase on the previous year!</p>
+                    <p>We secured <a href="http://www.york.ac.uk/about/awards/the-research-income-2015/" target="_blank" target="_blank">£46m in research funding</a> in 2014/15,  an 81% increase on the previous year!</p>
                 </div>
             </div>
         </section>
@@ -96,7 +96,7 @@
             <div class="section__content">
                 <div class="section__stat">We ranked <strong class="section__number">25<small>th</small></strong> worldwide in Arts and Humanities</div>
                 <div class="section__text">
-                    <p>in the <a href="http://www.york.ac.uk/about/awards/the-wur-arts-humanities-2016/">THE World University Rankings</a>, placing us amongst some of the best know Ivy League schools in the US.</p>
+                    <p>in the <a href="http://www.york.ac.uk/about/awards/the-wur-arts-humanities-2016/" target="_blank" target="_blank">THE World University Rankings</a>, placing us amongst some of the best know Ivy League schools in the US.</p>
                 </div>
             </div>
         </section>
@@ -104,7 +104,7 @@
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">29</strong> delegates from around the world gathered on campus to create the York Accord</div>
                 <div class="section__text">
-                    <p>The <a href="http://www.york.ac.uk/news-and-events/news/2015/research/yorkaccordtheresponsibilitytoprotectandrebuildhighereducationduringa/">York Accord</a> is a set of principles for protection and recovery for higher education in areas affected by armed conflict</a>.</p>
+                    <p>The <a href="http://www.york.ac.uk/news-and-events/news/2015/research/yorkaccordtheresponsibilitytoprotectandrebuildhighereducationduringa/" target="_blank" target="_blank">York Accord</a> is a set of principles for protection and recovery for higher education in areas affected by armed conflict</a>.</p>
                 </div>
             </div>
         </section>
@@ -128,7 +128,7 @@
             <div class="section__content">
                 <div class="section__stat">Our Life Sciences were ranked <strong class="section__number">55<small>th</small></strong> in the world</div>
                 <div class="section__text">
-                    <p>in the <a href="http://www.york.ac.uk/about/awards/the-wur-arts-humanities-2016/">THE World University Rankings</a>.</p>
+                    <p>in the <a href="http://www.york.ac.uk/about/awards/the-wur-arts-humanities-2016/" target="_blank" target="_blank">THE World University Rankings</a>.</p>
                 </div>
             </div>
         </section>
@@ -144,7 +144,7 @@
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">100</strong> articles have been contributed to The Conversation by our academics</div>
                 <div class="section__text">
-                    <p><a href="https://theconversation.com/institutions/university-of-york">The Conversation</a> is an independent source of news and opinion, written by experts from the academic community.</p>
+                    <p><a href="https://theconversation.com/institutions/university-of-york" target="_blank">The Conversation</a> is an independent source of news and opinion, written by experts from the academic community.</p>
                 </div>
             </div>
         </section>
@@ -176,7 +176,7 @@
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">227.5</strong>  to 141.5 was the final score as York beat Lancaster in the 51st annual Roses tournament</div>
                 <div class="section__text">
-                    <p>The sporting extravaganza was kicked off by England football manager Roy Hodgson.</p><p><a href="http://www.york.ac.uk/study/student-life/sport/roses2015/">#RosesAreWhite</a></p>
+                    <p>The sporting extravaganza was kicked off by England football manager Roy Hodgson.</p><p><a href="http://www.york.ac.uk/study/student-life/sport/roses2015/" target="_blank">#RosesAreWhite</a></p>
                 </div>
             </div>
         </section>
@@ -196,39 +196,47 @@
                 </div>
             </div>
         </section>
-        <section class="section--type1" id="graduate-research-school">
+        <section class="section--type1" id="visiting-students">
             <div class="section__content">
-                <div class="section__stat"><strong class="section__number">1,302</strong> students joined the new Graduate Research School</div>
+                <div class="section__stat">Over <strong class="section__number">350</strong> employers visited campus to promote their opportunities to our students,</div>
                 <div class="section__text">
-                    <p>Headed by Dean Tom Stoneham, the School nurtures our thriving community of research students.</p>
+                    <p>all eager to net a York graduate for their business</p>
                 </div>
             </div>
         </section>
-        <section class="section--type2" id="books">
+        <section class="section--type2" id="graduate-research-school">
+            <div class="section__content">
+                <div class="section__stat"><strong class="section__number">1,302</strong> students joined the new York Graduate Research School</div>
+                <div class="section__text">
+                    <p>Headed by Dean Tom Stoneham, <a href="http://www.york.ac.uk/research/graduate-school/" target="_blank">the School</a> nurtures our thriving community of research students.</p>
+                </div>
+            </div>
+        </section>
+        <section class="section--type3" id="books">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">1,803</strong> books were added to the library</div>
                 <div class="section__text">
-                    <p>thanks to suggestions from students via the <a href="https://www.york.ac.uk/library/borrowing/morebooks/">MoreBooks scheme</a>.</p>
+                    <p>thanks to suggestions from students via the MoreBooks scheme.</p>
                 </div>
             </div>
         </section>
-        <section class="section--type3" id="publications">
+        <section class="section--type4" id="publications">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">1,916</strong> new research publications</div>
                 <div class="section__text">
-                    <p>were added to the <a href="https://pure.york.ac.uk/portal/">York Research Database</a> by our academics.</p>
+                    <p>were added to the <a href="https://pure.york.ac.uk/portal/" target="_blank">York Research Database</a> by our academics.</p>
                 </div>
             </div>
         </section>
-        <section class="section--type4" id="donors">
+        <section class="section--type1" id="donors">
             <div class="section__content">
-                <div class="section__stat"><strong class="section__number">2,569</strong> alumni donors made a gift to the University</div>
+                <div class="section__stat"><strong class="section__number">2,569</strong> alumni and friends made a gift to the University</div>
                 <div class="section__text">
                     <p>Thank you so much! You've all made a huge difference.</p>
                 </div>
             </div>
         </section>
-        <section class="section--type1" id="modules">
+        <section class="section--type2" id="modules">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">3,376</strong> modules were taught</div>
                 <div class="section__text">
@@ -236,7 +244,7 @@
                 </div>
             </div>
         </section>
-        <section class="section--type2" id="graduates">
+        <section class="section--type3" id="graduates">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">5,585</strong> students graduated</div>
                 <div class="section__text">
@@ -244,7 +252,15 @@
                 </div>
             </div>
         </section>
-        <section class="section--type3" id="plants">
+        <section class="section--type4" id="plants">
+            <div class="section__content">
+                <div class="section__stat">We advertised over <strong class="section__number">11,000</strong>  career development opportunities to students</div>
+                <div class="section__text">
+                    <p>including graduate schemes, part-time work and volunteering.</p>
+                </div>
+            </div>
+        </section>
+        <section class="section--type1" id="plants">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">12,778</strong> plants were planted across campus</div>
                 <div class="section__text">
@@ -252,21 +268,23 @@
                 </div>
             </div>
         </section>
-        <section class="section--type4" id="open-days">
+        <section class="section--type2" id="open-days">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">14,717</strong> people booked to attend Open Days</div>
                 <div class="section__text">
-                    <p>including one visitor who travelled 10,000+ miles from Australia - g'day mate!</p>
+                    <p>including one visitor who travelled 10,000+ miles from Australia - g'day!</p>
                 </div>
             </div>
-
         </section>
-        <section class="section--type1" id="student-body">
+        <section class="section--type3" id="student-body">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">15,353</strong> students made up this years' student body</div>
+                <div class="section__text">
+                    <p>We couldn't do it without you. Thanks for all your hard work and contributions to University life.</p>
+                </div>
             </div>
         </section>
-        <section class="section--type2" id="festival-of-ideas">
+        <section class="section--type4" id="festival-of-ideas">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">31,500</strong> people attended York Festival of Ideas events</div>
                 <div class="section__text">
@@ -274,23 +292,23 @@
                 </div>
             </div>
         </section>
-        <section class="section--type3" id="twitter-followers">
+        <section class="section--type1" id="twitter-followers">
             <div class="section__content">
                 <div class="section__stat">Our number of Twitter followers grew to over <strong class="section__number">41,600</strong></div>
                 <div class="section__text">
-                    <p>Join them and keep up to date with what's new via <a href="https://twitter.com/uniofyork">@UniOfYork</a>.</p>
+                    <p>Join them and keep up to date with what's new via <a href="https://twitter.com/uniofyork" target="_blank">@UniOfYork</a>.</p>
                 </div>
             </div>
         </section>
-        <section class="section--type4" id="student-projects">
+        <section class="section--type2" id="student-projects">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">&pound;43,405</strong> was raised for student projects</div>
                 <div class="section__text">
-                    <p>via our crowdfunding platform <a href="http://www.yorkspace.net/yustart">YuStart</a>.</p>
+                    <p>via our crowdfunding platform <a href="http://www.yorkspace.net/yustart" target="_blank">YuStart</a>.</p>
                 </div>
             </div>
         </section>
-        <section class="section--type1" id="volunteers">
+        <section class="section--type3" id="volunteers">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">49,927</strong> hours were volunteered by our students</div>
                 <div class="section__text">
@@ -298,20 +316,20 @@
                 </div>
             </div>
         </section>
-        <section class="section--type2" id="books-loaned">
+        <section class="section--type4" id="books-loaned">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">286,156</strong> books were loaned from the library</div>
             </div>
         </section>
-        <section class="section--type3" id="refugees">
+        <section class="section--type1" id="refugees">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">&pound;500,000</strong> was pledged for scholarships for refugees</div>
                 <div class="section__text">
-                    <p>The scheme will provide <a href="http://www.york.ac.uk/news-and-events/news/2015/refugee-crisis-initiatives/">financial support for three undergraduate students per year for three years</a>.</p>
+                    <p>The scheme will provide <a href="http://www.york.ac.uk/news-and-events/news/2015/refugee-crisis-initiatives/" target="_blank" target="_blank">financial support for three undergraduate students per year for three years</a>.</p>
                 </div>
             </div>
         </section>
-        <section class="section--type4" id="lectures">
+        <section class="section--type2" id="lectures">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">4,248,031</strong> hours were spent in classes</div>
                 <div class="section__text">
@@ -319,7 +337,7 @@
                 </div>
             </div>
         </section>
-        <section class="section--type1" id="finally">
+        <section class="section--type3" id="finally">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">And finally...</strong></div>
                 <div class="section__text">
@@ -327,7 +345,7 @@
                 </div>
             </div>
         </section>
-        <section class="section--type3" id="outro">
+        <section class="section--type4" id="outro">
             <div class="section__content">
                 <div class="section__text">
                     <h2 class="outro__header">Merry Christmas!</h2>
