Text amends and section renumbering

--- a/index.html
+++ b/index.html
@@ -124,15 +124,7 @@
                 </div>
             </div>
         </section>
-        <section class="section--type4" id="life-sciences">
-            <div class="section__content">
-                <div class="section__stat">Our Life Sciences were ranked <strong class="section__number">55<small>th</small></strong> in the world</div>
-                <div class="section__text">
-                    <p>in the <a href="http://www.york.ac.uk/about/awards/the-wur-life-sciences-2016/" target="_blank">THE World University Rankings</a>.</p>
-                </div>
-            </div>
-        </section>
-        <section class="section--type1" id="masters-scholarships">
+        <section class="section--type4" id="masters-scholarships">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">60</strong> scholarships for Masters study were awarded to students from under-represented groups.</div>
                 <div class="section__text">
@@ -140,7 +132,7 @@
                 </div>
             </div>
         </section>
-        <section class="section--type2" id="conversation">
+        <section class="section--type1" id="conversation">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">100</strong> articles have been contributed to The Conversation by our academics.</div>
                 <div class="section__text">
@@ -148,7 +140,7 @@
                 </div>
             </div>
         </section>
-        <section class="section--type3" id="qs-rankings">
+        <section class="section--type2" id="qs-rankings">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">103<small>rd</small></strong> in the QS World University Rankings.</div>
                 <div class="section__text">
@@ -156,7 +148,7 @@
                 </div>
             </div>
         </section>
-        <section class="section--type4" id="undergrad-bursaries">
+        <section class="section--type3" id="undergrad-bursaries">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">121</strong> undergraduate bursaries</div>
                 <div class="section__text">
@@ -164,7 +156,7 @@
                 </div>
             </div>
         </section>
-        <section class="section--type1" id="public-lectures">
+        <section class="section--type4" id="public-lectures">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">182</strong> public lectures on campus</div>
                 <div class="section__text">
@@ -172,7 +164,7 @@
                 </div>
             </div>
         </section>
-        <section class="section--type2" id="roses">
+        <section class="section--type1" id="roses">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">227.5</strong>  to 141.5 was the final score as York beat Lancaster in the 51st annual Roses tournament.</div>
                 <div class="section__text">
@@ -180,7 +172,7 @@
                 </div>
             </div>
         </section>
-        <section class="section--type3" id="students-abroad">
+        <section class="section--type2" id="students-abroad">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">242</strong> of our students studied abroad</div>
                 <div class="section__text">
@@ -188,7 +180,7 @@
                 </div>
             </div>
         </section>
-        <section class="section--type4" id="visiting-students">
+        <section class="section--type3" id="visiting-students">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">251</strong> visiting students came to York</div>
                 <div class="section__text">
@@ -196,15 +188,15 @@
                 </div>
             </div>
         </section>
-        <section class="section--type1" id="visiting-students">
+        <section class="section--type4" id="visiting-students">
             <div class="section__content">
                 <div class="section__stat">Over <strong class="section__number">350</strong> employers visited campus to promote opportunities to our students,</div>
                 <div class="section__text">
-                    <p>all eager to net a York graduate for their business</p>
+                    <p>all eager to net a York graduate for their business.</p>
                 </div>
             </div>
         </section>
-        <section class="section--type2" id="graduate-research-school">
+        <section class="section--type1" id="graduate-research-school">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">1,302</strong> students joined the new York Graduate Research School.</div>
                 <div class="section__text">
@@ -212,7 +204,7 @@
                 </div>
             </div>
         </section>
-        <section class="section--type3" id="books">
+        <section class="section--type2" id="books">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">1,803</strong> books were added to the library</div>
                 <div class="section__text">
@@ -220,7 +212,7 @@
                 </div>
             </div>
         </section>
-        <section class="section--type4" id="publications">
+        <section class="section--type3" id="publications">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">1,916</strong> new research publications</div>
                 <div class="section__text">
@@ -228,7 +220,7 @@
                 </div>
             </div>
         </section>
-        <section class="section--type1" id="donors">
+        <section class="section--type4" id="donors">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">2,569</strong> alumni and friends made a gift to the University.</div>
                 <div class="section__text">
@@ -236,7 +228,7 @@
                 </div>
             </div>
         </section>
-        <section class="section--type2" id="modules">
+        <section class="section--type1" id="modules">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">3,376</strong> modules were taught.</div>
                 <div class="section__text">
@@ -244,7 +236,7 @@
                 </div>
             </div>
         </section>
-        <section class="section--type3" id="graduates">
+        <section class="section--type2" id="graduates">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">5,585</strong> students graduated</div>
                 <div class="section__text">
@@ -252,7 +244,7 @@
                 </div>
             </div>
         </section>
-        <section class="section--type4" id="plants">
+        <section class="section--type3" id="plants">
             <div class="section__content">
                 <div class="section__stat">We advertised over <strong class="section__number">11,000</strong>  career development opportunities to students</div>
                 <div class="section__text">
@@ -260,7 +252,7 @@
                 </div>
             </div>
         </section>
-        <section class="section--type1" id="plants">
+        <section class="section--type4" id="plants">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">12,778</strong> plants were planted across campus</div>
                 <div class="section__text">
@@ -268,7 +260,7 @@
                 </div>
             </div>
         </section>
-        <section class="section--type2" id="open-days">
+        <section class="section--type1" id="open-days">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">14,717</strong> people booked to attend Open Days</div>
                 <div class="section__text">
@@ -276,15 +268,15 @@
                 </div>
             </div>
         </section>
-        <section class="section--type3" id="student-body">
+        <section class="section--type2" id="student-body">
             <div class="section__content">
-                <div class="section__stat"><strong class="section__number">15,353</strong> students made up this years' student community.</div>
+                <div class="section__stat"><strong class="section__number">15,353</strong> students made up this year's student community.</div>
                 <div class="section__text">
                     <p>We couldn't do it without you. Thanks for all your hard work and contributions to University life.</p>
                 </div>
             </div>
         </section>
-        <section class="section--type4" id="festival-of-ideas">
+        <section class="section--type3" id="festival-of-ideas">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">31,500</strong> people attended York Festival of Ideas events.</div>
                 <div class="section__text">
@@ -292,7 +284,7 @@
                 </div>
             </div>
         </section>
-        <section class="section--type1" id="twitter-followers">
+        <section class="section--type4" id="twitter-followers">
             <div class="section__content">
                 <div class="section__stat">Our number of Twitter followers grew to over <strong class="section__number">41,600</strong>.</div>
                 <div class="section__text">
@@ -300,7 +292,7 @@
                 </div>
             </div>
         </section>
-        <section class="section--type2" id="student-projects">
+        <section class="section--type1" id="student-projects">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">&pound;43,405</strong> was raised for student projects</div>
                 <div class="section__text">
@@ -308,7 +300,7 @@
                 </div>
             </div>
         </section>
-        <section class="section--type3" id="volunteers">
+        <section class="section--type2" id="volunteers">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">49,927</strong> hours were volunteered by our students.</div>
                 <div class="section__text">
@@ -316,12 +308,12 @@
                 </div>
             </div>
         </section>
-        <section class="section--type4" id="books-loaned">
+        <section class="section--type3" id="books-borrowed">
             <div class="section__content">
-                <div class="section__stat"><strong class="section__number">286,156</strong> books were loaned from the library.</div>
+                <div class="section__stat"><strong class="section__number">286,156</strong> books were borrowed from the library.</div>
             </div>
         </section>
-        <section class="section--type1" id="refugees">
+        <section class="section--type4" id="refugees">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">&pound;500,000</strong> was pledged for scholarships for refugees.</div>
                 <div class="section__text">
@@ -329,7 +321,7 @@
                 </div>
             </div>
         </section>
-        <section class="section--type2" id="lectures">
+        <section class="section--type1" id="lectures">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">4,248,031</strong> hours were spent in classes.</div>
                 <div class="section__text">
@@ -337,7 +329,7 @@
                 </div>
             </div>
         </section>
-        <section class="section--type4" id="finally">
+        <section class="section--type2" id="finally">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">And finally...</strong></div>
                 <div class="section__text">
