Added metadata (including open graph)

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>2015 review of the year - University of York</title>
-        <meta name="description" content="">
+        <meta name="description" content="It's been another busy year for the University. See some of the key numbers that have been part of our 2015.">
+        <meta property="og:title" content="Merry Christmas from the University of York" />
+      	<meta property="og:type" content="article" />
+      	<meta property="og:url" content="http://www.york.ac.uk/e-card/2015/" />
+      	<meta property="og:image" content="http://www.york.ac.uk/e-card/2015/img/open-graph-image.jpg" />
+      	<meta property="og:description" content="It's been another busy year for the University. See some of the key numbers that have been part of our 2015." />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
-
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-custom.min.js"></script>
         <script src="//use.typekit.net/dvj8rpp.js"></script>
